tests/snapshots/ui_snapshots__run_40x10.snap
---
source: tests/ui_snapshots.rs
expression: terminal.backend()
---
"╭ immich-alt-text ─ photos.hom RUNNING ╮"
"│██████████░░░░░░░░░░░░░ 1 287 / 3 102 │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│ s start    p pause    ↑↓ scroll log  │"
"╰──────────────────────────────────────╯"
