tests/snapshots/ui_snapshots__run_idle_100x30.snap
---
source: tests/ui_snapshots.rs
expression: terminal.backend()
---
"╭ immich-alt-text ─ photos.home.lan ─ gemma-3-12b-it @ localhost:1234 ─ 1 worker ──────────── IDLE ╮"
"│╭ progress ──────────────────────────────────────────╮╭ counters ────────────────────────────────╮│"
"││░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ 0 / 0 ││scanned         0   done            0     ││"
"││elapsed 00:00:00   rate --   eta --:--:--           ││queued          0   failed          0     ││"
"││                                                    ││avg llm        --   avg total      --     ││"
"│╰────────────────────────────────────────────────────╯╰──────────────────────────────────────────╯│"
"│╭ in flight ─────────────────────────────────────────────────────────────────────────────────────╮│"
"││press s to start                                                                                ││"
"│╰────────────────────────────────────────────────────────────────────────────────────────────────╯│"
"│╭ log ───────────────────────────────────────────────────────────────────────────────────────────╮│"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"│╰────────────────────────────────────────────────────────────────────────────────────────────────╯│"
"│ s start    p pause    ↑↓ scroll log    enter expand    c settings    q quit                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
