tests/snapshots/ui_snapshots__run_popup_120x40.snap
---
source: tests/ui_snapshots.rs
expression: terminal.backend()
---
"╭ immich-alt-text ─ photos.home.lan ─ gemma-3-12b-it @ localhost:1234 ─ 1 worker ───────────────────────────── RUNNING ╮"
"│╭ progress ─────────────────────────────────────────────────────╮╭ counters ─────────────────────────────────────────╮│"
"││████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░ 1 287 / 3 102 ││scanned    14 920   done        1 284              ││"
"││elapsed 01:42:17   rate 12.6/min   eta 02:23:59                ││queued      3 102   failed          3              ││"
"││                                                               ││avg llm     4.1 s   avg total   4.7 s              ││"
"│╰───────────────────────────────────────────────────────────────╯╰───────────────────────────────────────────────────╯│"
"│╭ in flight ─────────────────────────────────────────────────────────────────────────────────────────────────────────╮│"
"││● IMG_4471.HEIC       calling llm 3/4… 3.2 s                                                                        ││"
"│╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│"
"│╭ log ───────────────────────────────────────────────────────────────────────────────────────────────────────────────╮│"
"││18:42:11  ✓ IMG_╭ IMG_4470.HEIC ──────────────────────────────────────────────────────── esc close ╮ward the water …││"
"││18:42:07  ✓ IMG_│A golden retriever sits on a wooden dock at sunset, looking toward the water while│e sky.          ││"
"││18:42:02  ✗ IMG_│boats pass by.                                                                    │                ││"
"││18:41:58  ✓ IMG_│                                                                                  │loth.           ││"
"││                │                                                                                  │                ││"
"││                │                                                                                  │                ││"
"││                │                                                                                  │                ││"
"││                │                                                                                  │                ││"
"││                │                                                                                  │                ││"
"││                │                                                                                  │                ││"
"││                │                                                                                  │                ││"
"││                │                                                                                  │                ││"
"││                │                                                                                  │                ││"
"││                │                                                                                  │                ││"
"││                │                                                                                  │                ││"
"││                │                                                                                  │                ││"
"││                │                                                                                  │                ││"
"││                │                                                                                  │                ││"
"││                │                                                                                  │                ││"
"││                ╰──────────────────────────────────────────────────────────────────────────────────╯                ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"│╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│"
"│ s start    p pause    ↑↓ scroll log    enter expand    c settings    q quit                                          │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
