tests/snapshots/ui_snapshots__settings_80x24.snap
---
source: tests/ui_snapshots.rs
expression: terminal.backend()
---
"                                                                                "
" ╭ settings ──────────────────────────────────────────────────────────────────╮ "
" │  immich url         https://photos.home.lan                                │ "
" │  immich api key     ••••••••••                                 ctrl-r show │ "
" │▸ immich timeout (s) 30▏                                                    │ "
" │  llm base url       http://localhost:1234/v1                               │ "
" │  llm api key                                                   ctrl-r show │ "
" │  llm model          gemma-3-12b-it                                         │ "
" │  prompt             Write alt text for this photo: one or two              │ "
" │                      plain sentences describing what is visib              │ "
" │                     le. Name the people when they are clearly              │ "
" │                      the subject. Use the context only where               │ "
" │  llm timeout (s)    120                                                    │ "
" │  workers            1                                                      │ "
" │  retries            3                                                      │ "
" │  max tokens         200                                                    │ "
" │  theme              (●) btop   ( ) mono                                    │ "
" │  dry run            (●) off   ( ) on                                       │ "
" │                                                                            │ "
" │  ctrl-t test connections   immich ✓ v3.1.0   llm ✗ HTTP 401 Unauthorized   │ "
" │                                                                            │ "
" │                                                                            │ "
" │ ctrl-s save    ctrl-t test    ← → select    ctrl-u clear    esc back       │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
