tests/snapshots/ui_snapshots__settings_error_100x30.snap
---
source: tests/ui_snapshots.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"           ╭ settings ──────────────────────────────────────────────────────────────────╮           "
"           │▸ immich url         https://photos.home.lan▏                               │           "
"           │  immich api key     secret-key                                 ctrl-r hide │           "
"           │  immich timeout (s) 30                                                     │           "
"           │  llm base url       http://localhost:1234/v1                               │           "
"           │  llm api key                                                   ctrl-r hide │           "
"           │  llm model          gemma-3-12b-it                                         │           "
"           │  prompt             Write alt text for this photo: one or two              │           "
"           │                      plain sentences describing what is visib              │           "
"           │                     le. No preamble, no quotes, no "This imag              │           "
"           │                     e shows".                                              │           "
"           │  llm timeout (s)    120                                                    │           "
"           │  workers            1                                                      │           "
"           │  retries            3                                                      │           "
"           │  max tokens         200                                                    │           "
"           │  context people     ( ) off   (●) on                                       │           "
"           │  context place      ( ) off   (●) on                                       │           "
"           │  context date       ( ) off   (●) on                                       │           "
"           │  theme              (●) btop   ( ) mono                                    │           "
"           │  dry run            (●) off   ( ) on                                       │           "
"           │                                                                            │           "
"           │  ctrl-t test connections                                                   │           "
"           │  invalid config: run.workers must be at least 1                            │           "
"           │                                                                            │           "
"           │ ctrl-s save    ctrl-t test    ← → select    ctrl-u clear    esc back       │           "
"           ╰────────────────────────────────────────────────────────────────────────────╯           "
"                                                                                                    "
"                                                                                                    "
