tests/snapshots/ui_snapshots__settings_mono_100x30.snap
---
source: tests/ui_snapshots.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"           ╭ settings ──────────────────────────────────────────────────────────────────╮           "
"           │  immich url         https://photos.home.lan                                │           "
"           │  immich api key     ••••••••••                                 ctrl-r show │           "
"           │  immich timeout (s) 30                                                     │           "
"           │  immich tag                                                    no tag      │           "
"           │  llm base url       http://localhost:1234/v1                               │           "
"           │  llm api key                                                   ctrl-r show │           "
"           │  llm model          gemma-3-12b-it                                         │           "
"           │  prompt             Write alt text for this photo: one or two              │           "
"           │                      plain sentences describing what is visib              │           "
"           │                     le. No preamble, no quotes, no "This imag              │           "
"           │                     e shows".                                              │           "
"           │  llm timeout (s)    120                                                    │           "
"           │  workers            1                                                      │           "
"           │  retries            3                                                      │           "
"           │  max tokens         200                                                    │           "
"           │  context people     ( ) off   (●) on                                       │           "
"           │  context place      ( ) off   (●) on                                       │           "
"           │  context date       ( ) off   (●) on                                       │           "
"           │▸ theme              ( ) btop   (●) mono   ← →                              │           "
"           │  dry run            (●) off   ( ) on                                       │           "
"           │  overwrite          (●) off   ( ) on                                       │           "
"           │                                                                            │           "
"           │  ctrl-t test connections                                                   │           "
"           │                                                                            │           "
"           │ ctrl-s save    ctrl-t test    ← → select    ctrl-u clear    esc back       │           "
"           ╰────────────────────────────────────────────────────────────────────────────╯           "
"                                                                                                    "
