tests/snapshots/ui_snapshots__settings_prompt_80x24.snap
---
source: tests/ui_snapshots.rs
expression: terminal.backend()
---
"                                                                                "
" ╭ settings ──────────────────────────────────────────────────────────────────╮ "
" │  immich url         https://photos.home.lan                                │ "
" │  immich api key     ••••••••••                                 ctrl-r show │ "
" │  immich timeout (s) 30                                                     │ "
" │  llm base url       http://localhost:1234/v1                               │ "
" │  llm api key                                                   ctrl-r show │ "
" │  llm model          gemma-3-12b-it                                         │ "
" │▸ prompt              the subject. Use the context only where               │ "
" │                     the image supports it. Do not list the co              │ "
" │                     ntext back. No preamble, no quotes, no "T              │ "
" │                     his image shows".▏                                     │ "
" │  llm timeout (s)    120                                                    │ "
" │  workers            1                                                      │ "
" │  retries            3                                                      │ "
" │  max tokens         200                                                    │ "
" │  theme              (●) btop   ( ) mono                                    │ "
" │  dry run            (●) off   ( ) on                                       │ "
" │                                                                            │ "
" │  ctrl-t test connections                                                   │ "
" │                                                                            │ "
" │                                                                            │ "
" │ ctrl-s save    ctrl-t test    ← → select    ctrl-u clear    esc back       │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
