tests/snapshots/ui_snapshots__settings_prompt_scroll_80x24.snap
---
source: tests/ui_snapshots.rs
expression: terminal.backend()
---
" ╭ settings ──────────────────────────────────────────────────────────────────╮ "
" │  immich url         https://photos.home.lan                                │ "
" │  immich api key     ••••••••••                                 ctrl-r show │ "
" │  immich timeout (s) 30                                                     │ "
" │  llm base url       http://localhost:1234/v1                               │ "
" │  llm api key                                                   ctrl-r show │ "
" │  llm model          gemma-3-12b-it                                         │ "
" │▸ prompt             two                                                    │ "
" │                     three                                                  │ "
" │                     four                                                   │ "
" │                     five▏                                                  │ "
" │  llm timeout (s)    120                                                    │ "
" │  workers            1                                                      │ "
" │  retries            3                                                      │ "
" │  max tokens         200                                                    │ "
" │  context people     ( ) off   (●) on                                       │ "
" │  context place      ( ) off   (●) on                                       │ "
" │  context date       ( ) off   (●) on                                       │ "
" │  theme              (●) btop   ( ) mono                                    │ "
" │  dry run            (●) off   ( ) on                                       │ "
" │                                                                            │ "
" │  ctrl-t test connections                                                   │ "
" │ ctrl-s save    ctrl-t test    ← → select    ctrl-u clear    esc back       │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
